<resources>
    <string name="app_name">Appsassins</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign In</string>
    <string name="enterEmailLogin">Email</string>
    <string name="enterPasswordLogin">Password</string>
    <string name="loginButton">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="enterFullName">Full Name</string>
    <string name="signupConfirmPassword">Confirm Password</string>
    <string name="errorEnterFirstandLastName">Enter a first and a last name</string>
    <string name="enterValidEmail">Enter a valid email</string>
    <string name="passwordAtLeast8">Password must be at least 8 alphanumeric characters with at least 1 number</string>
    <string name="passDontMatch">Passwords must match!</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="temp">Temp Button</string>
    <string name="notif_cancel">Cancel</string>
    <string name="notif_confirm">Confirm</string>
    <string name="notif_deny">Deny</string>
    <string name="dialog_notifications">Send invitation response</string>
    <string name="dialog_confirm_kill">Is this a valid kill?</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> </string>
    <string name="confirm_kill_image">Confirm Kill</string>
    <string name="notifications">Notifications</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="remainingplayers">Players Eliminated:</string>


</resources>
